--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "STARTER",
+  "name": "app",
   "version": "0.0.1",
   "devDependencies": {
-    "node-sass": "~0.9.3",
-    "grunt": "~0.4.4",
+    "autoprefixer-core": "^5.1.7",
+    "csswring": "^3.0.1",
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "^2.2.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-sass": "~0.11.0",
-    "grunt-contrib-copy": "~0.5.0",
     "grunt-drush": "*",
-    "grunt-lib-contrib": "0.5.2",
-    "node-bourbon": "1.2.3"
+    "grunt-postcss": "^0.3.0",
+    "grunt-sass": "~0.18",
+    "load-grunt-tasks": "~0.6.0",
+    "node-bourbon": "*",
+    "node-sass": "*"
   }
 }
