--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "app",
-  "version": "0.0.1",
-  "devDependencies": {
-    "autoprefixer-core": "^5.1.7",
-    "csswring": "^3.0.1",
-    "grunt": "~0.4.5",
-    "grunt-autoprefixer": "^2.2.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-drush": "*",
-    "grunt-postcss": "^0.3.0",
-    "grunt-sass": "~0.18",
-    "load-grunt-tasks": "~0.6.0",
-    "node-bourbon": "*",
-    "node-sass": "*"
+  "name": "vlasova5",
+  "version": "2.0.0",
+  "description": "DOCUMENTATION ---------------------------------- Please refer also to the community documentation:   http://drupal.org/node/1948260",
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "autoprefixer": "^6.0.3",
+    "css-mqpacker": "^4.0.0",
+    "cssnext": "^1.8.4",
+    "csswring": "^4.0.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-postcss": "^6.0.1",
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.4.2"
   }
 }
