--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,23 @@
 {
-  "name": "zurb_foundation",
-  "private": "true",
+  "name": "foundation-sites-template",
+  "version": "1.0.0",
+  "authors": [
+    "ZURB <foundation@zurb.com>"
+  ],
+  "description": "Basic template for a new Foundation for Sites project.",
+  "main": "index.html",
+  "license": "MIT",
+  "homepage": "http://foundation.zurb.com",
   "dependencies": {
-    "foundation": "zurb/bower-foundation"
-  }
+    "foundation-sites": "~6.4.0",
+    "motion-ui": "~1.2.3"
+  },
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "private": true
 }
