--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "vlasova5",
-  "version": "2.0.0",
-  "description": "DOCUMENTATION ---------------------------------- Please refer also to the community documentation:   http://drupal.org/node/1948260",
+  "name": "foundation-sites-template",
+  "version": "1.0.0",
+  "description": "Basic template for a new Foundation for Sites project.",
   "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "autoprefixer": "^6.0.3",
-    "css-mqpacker": "^4.0.0",
-    "cssnext": "^1.8.4",
-    "csswring": "^4.0.0",
+  "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-postcss": "^6.0.1",
-    "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.4.2"
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-sass": "^2.1.0"
+  },
+  "scripts": {
+    "start": "gulp",
+    "build": "gulp sass"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zurb/foundation-sites-template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zurb/foundation-sites/issues",
+    "email": "foundation@zurb.com"
+  },
+  "author": "ZURB <foundation@zurb.com>",
+  "license": "MIT",
+  "private": true,
+  "dependencies": {
+    "gulp-autoprefixer": "^3.1.0"
   }
 }
